# River

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  LOCAL_SECRETS.md  README.md  justfile  program_id.txt
circuits/salary_match/: Nargo.toml  Prover.toml
circuits/salary_match/src/: main.nr
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: dcap-qvl-web_bg.wasm
frontend/public/circuit/: salary_match.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: CandidateFlow.tsx  EmployerFlow.tsx  LandingPage.tsx  MarketingVisuals.tsx  ResultSection.tsx  RoleCard.tsx  WalletConnector.tsx  WalletProvider.tsx  WavesBackground.tsx  index.ts
frontend/src/hooks/: useRiverWallet.tsx
frontend/src/lib/: burner-wallet.ts  index.ts  river-program.ts  useProofGeneration.ts  useSolanaVerification.ts
frontend/src/pages/: MarketingHome.tsx  NegotiationApp.tsx
frontend/src/styles/: index.css
keypair/: .gitkeep
programs/river/: Cargo.toml
programs/river/src/: lib.rs
scripts/: compile.sh  deploy.sh  prove.sh  setup.sh
