[workspace]
members = ["programs/*"]
resolver = "2"

# Force constant_time_eq to older version (0.4.x requires edition2024 which SBF cargo doesn't support)
[workspace.dependencies]
constant_time_eq = "0.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
