[package]
name = "river"
version = "0.1.0"
description = "Double-blind salary negotiation on Solana with MagicBlock Private Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "river"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
# Pin to avoid edition2024 issue with 0.4.x
constant_time_eq = ">=0.3.0, <0.4.0"
